--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .gradle
-/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,4 +11,7 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
-.idea
+/.idea/
+/gradle/
+/out/
+/.gradle/
