--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,17 @@ plugins {
 
 group 'github.spritecn'
 version '1.0-SNAPSHOT'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven {url 'https://maven.aliyun.com/repository/public'}
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.codehaus.groovy:groovy-all:3.0.6'
+    compile 'com.sparkjava:spark-core:2.9.3'
+    compile 'com.google.code.gson:gson:2.8.6'
+    compile 'org.slf4j:slf4j-log4j12:1.7.25'
+    testCompile 'org.spockframework:spock-core:2.0-M4-groovy-3.0'
 }
