--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.9.3'
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'org.slf4j:slf4j-log4j12:1.7.25'
+    compile 'com.squareup.okhttp3:okhttp:3.14.9'
     testCompile 'org.spockframework:spock-core:2.0-M4-groovy-3.0'
 }
