--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,6 @@ dependencies {
     compile 'org.slf4j:slf4j-log4j12:1.7.25'
     compile 'com.squareup.okhttp3:okhttp:3.14.9'
     compile 'com.github.icecooly:FastHttpClient:1.7'
+    compile 'io.swagger:swagger-parser:1.0.52'
     testCompile 'org.spockframework:spock-core:2.0-M4-groovy-3.0'
 }
