--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,11 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.14.9'
     compile 'com.github.icecooly:FastHttpClient:1.7'
     compile 'io.swagger:swagger-parser:1.0.52'
+    compile 'org.jdbi:jdbi3-sqlite:3.15.1'
+    compile 'org.jdbi:jdbi3-sqlobject:3.15.1'
+    compile ('cn.hutool:hutool-setting:5.5.1') {
+        exclude  group: 'cn.hutool', module: 'hutool-log'
+    }
+
     testCompile 'org.spockframework:spock-core:2.0-M4-groovy-3.0'
 }
