--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.9.3'
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'org.slf4j:slf4j-log4j12:1.7.25'
+    compile 'org.apache.commons:commons-lang3:3.11'
     compile 'com.squareup.okhttp3:okhttp:3.14.9'
     compile 'com.github.icecooly:FastHttpClient:1.7'
     compile 'io.swagger:swagger-parser:1.0.52'
