update JOOQ gen POJO

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,7 @@
+#swagger ui的地址
 apiDoc.swaggerPath = swagger-ui.html
+#swagger json的地址，获取时用下面地址替换上面地址
 apiDoc.apiDocPath = v2/api-docs
+#jdbc数据库连接串地址，暂时只支持sqlite
+jdbc.url = jdbc:sqlite:src/main/resources/data/main.db
+
