--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ task jooqCodeGenerate (type:Task) {
                     //password() //不需要密码，省略
                 }
                 generator() {
+                    strategy() {
+                        name('org.jooq.codegen.example.EntityGenStrategy')
+                    }
                     database() {
                         includes('.*') //包括的数据表
                         excludes("sqlite_sequence") //排除系统自增id表
